--- a/styles.css
+++ b/styles.css
@@ -3,14 +3,12 @@ body {
   overflow: hidden;
 }
 
-circle {
-  fill: steelblue;
-}
+
 
 .line-path {
   fill: none;
-  stroke: maroon;
-  stroke-width: 5;
+  stroke:steelblue;
+  stroke-width: 2;
   stroke-linejoin: round;
 }
 
@@ -28,7 +26,7 @@ text {
 }
 
 .axis-label {
-  font-size: 5em;
+  font-size: 2em;
   fill: #8E8883;
 }
 
